--- a/ReadMe/Monkey Island Image Converter.html
+++ b/ReadMe/Monkey Island Image Converter.html
@@ -17,16 +17,16 @@
 	<span class="style7">
 		<span class="style10">
 			Monkey Island Image Converter<br>
-			By Bgbennyboy<br>
-			Version 1.1<br>
-			<a href="http://quick.mixnmojo.com">Http://quick.mixnmojo.com</a>
+			Version 1.2<br>
+			By <a href="https://quickandeasysoftware.net/">Quick and Easy Software</a>
 		</span><br>
 	</span>
 	
-	<p class="style7"><strong><em>New in this version (1.1):</em></strong></p>
+	<p class="style7"><strong><em>New in this version (1.2):</em></strong></p>
 
 	<ul>
-		<li class="style7">Fixed bug that affected non-square images. The dds width/height was read/written in reverse order, creating invalid DXT files.</li><br>
+		<li class="style7">Added support for the Xbox 360 version of the games.</li><br>
+		<li class="style7">Fixed the folder selection dialog not displaying correctly.</li><br>
 	</ul>
 
 	
@@ -42,7 +42,7 @@
 	</p>
 	
 	<ul>
-		<li class="style7">Choose a folder to save the new files into. The default is the desktop.</li>
+		<li class="style7">Choose a folder to save the new files into.</li>
 		<li class="style7">Drag and drop .DDS files or a folder containing DDS files into the program window.</li>
 		<li class="style7">The files will then be converted.</li>
 		<li class="style7">If the DDS files are inside a subfolder then the new files will be placed into an equivalent subfolder when they are converted.</li>
@@ -62,14 +62,14 @@
 	
 	<p class="style7"><em><strong>Support:</strong></em>
 		<br>
-		<a href="http://quick.mixnmojo.com/contact">Contact me</a>.
+		<a href="https://quickandeasysoftware.net/contact">Contact me</a>.
 		<br><br>
 		All my software is completely free. If you find this program useful please consider making a donation. This can be done on my website.
 	</p>
 
 	
 	<br>
-	<p class="style7 style12">bgbennyboy 17/07/10</p>
+	<p class="style7 style12">Last updated 30/12/25</p>
 
 </body>
 </html>
